[package]
name = "apple-runloop"
version = "0.1.0"
edition = "2018"

[target.'cfg(target_vendor = "apple")'.dependencies]
core-foundation = { version = "0.9.3", default-features = false }
io-lifetimes = { version = "1.0.3", default-features = false }
libc = { version = "0.2.138", default-features = false }
